# policy-classifier

./: .gitattributes  .gitignore  AGENTS.md  Add zero-shot + transformer features to meta-classifier.md  CONTRIBUTING.md  DATA_EXPORT_AND_COMMIT.md  DATA_LICENSES.md  HISTORY_CLEANUP.md  LICENSE  README.md  README.md.bak  README.md.origin  __init__.py  manuscript.md  manuscript.md.bak  manuscript_anonymized.md  pyproject.toml  requirements.txt  speech_review.md  stratified_classification_report.md  stratified_sample_ids.txt
.githooks/: README.md  pre-commit
.github/: agent_plan.md  copilot-instructions.md  copilot-instructions.md.bak  directory_tree.md  missing_items.md
analysis/: aggregate.py
classifier/: __init__.py  persist.py  persist_parquet.py  scorer.py
data/: manual_corrections_draft.csv  motion_topics.json.zst
db/: __init__.py  readers.py  schema.py
definitions/: loader.py  political_spectrum.yaml
docs/: DEFINITION_OF_DONE.md  EXPERIMENT_LOGGING.md  GRAPHIFY_TOKEN_TIPS.md  KEYWORDS.md  LATENT_VARIABLE_MODEL_SPEC.md  PANDOC_USAGE.md  RUN_LOG_20260528_RECENCY_WEIGHTED.md  external_party_benchmarks_template.csv  rlhf_research_memo.md  say_vs_do_contradiction_implementation_spec.md  say_vs_do_execution_plan.md
fetch/: riksdag_client.py
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
logs/: active_learning_candidates_20260516T083656Z.csv  active_learning_candidates_20260528T193949Z.parquet  all_predictions_with_probs.csv  definitions_snapshot_speech_classifier.json  finetune.pid  (+38 more)
(+345 files in other folders)
