[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swedish_parliament_policy_classifier"
version = "0.1.0"
description = "Reproducible pipeline to classify Swedish parliamentary motions and compute party policy profiles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "datasets>=4.8.5",
  "pydantic==2.13.3",
  "python-dotenv>=1.2.2",
  "PyYAML",
  "requests",
  "sentencepiece>=0.2.1",
  "seaborn>=0.12.0",
  "statsmodels>=0.14.0",
  "pytest-cov>=7.1.0",
  "transformers>=5.8.1",
  "accelerate>=1.13.0",
  "torch>=2.12.0",
  "pyarrow>=24.0.0",
  "zstandard>=0.25.0",
  "polars>=1.41.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "matplotlib",
  "scipy",
  "scikit-learn",
  "plotly",
  "bertopic>=0.16.0",
  "lightgbm>=4.0.0",
  "ollama>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["swedish_parliament_policy_classifier*"]

[dependency-groups]
dev = [
    "bertopic>=0.17.4",
    "lightgbm>=4.6.0",
    "ollama>=0.6.2",
]

